# movies-bot

./: LICENSE  README.md  pyproject.toml
.github/workflows/: standard-checks.yml
