[tool.poetry]
name = "movies-bot"
version = "0.1.0"
description = "Discord bot to search for movies across the web"
authors = ["Jakub Kot <xnetcat.dev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
"discord.py" = "^1.7.3"
pymongo = "^4.1.1"
rapidfuzz = "^2.0.11"
python-slugify = "^6.1.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylint = "^2.14.1"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.format]
limit-inference-results = 0
fail-under = 9

[mypy]
ignore_missing_imports = true
